index.css
@import url("map.css");

.group-wrapper {
  display: block;
  float: left;
  width: 430px;
  height: 323px;
}

#linearlogbutton, #linearlogbuttonchange {
  background-color: #f0f0f0;
  display: block;
  left: auto;
  border: 0;
  margin: 0;
  padding: 0;
  width: 430px;
  height: 20px;
  float: left;
  clear: left;
}

#linearlogbutton:hover, #linearlogbuttonchange:hover {
  background-color: #a0a0a0;
  display: block;
  left: auto;
  border: 0;
  margin: 0;
  padding: 0;
  width: 430px;
  height: 20px;
  float: left;
  clear: left;
}

#nationwide-daily, #nationwide-daily-change {
  display: block;
  float: left;
  width: 430px;
  height: 303px;
}

#bystate-daily {
  display: block;
  float: left;
  width: 430px;
  height: 323px;
}

#nationwide-dynamics {
  float: left;
  width: 430px;
  height: 323px;
}

#bystate-dynamics {
  float: left;
  width: 860px;
  height: 646px;
}

#nationwide-latest {
  display: block;
  float: left;
  width: 430px;
  height: 323px;
}

#malaysia-map {
  display: block;
  background: aliceblue;
  float: left;
  width: 430px;
  height: 323px;
}

#reference {
  float: left;
}

#bystate-dynamics div svg g g g g path { 
	stroke-width:4px; 
}

body, html {
	height: 100%;
	margin: 0;
	font-family: Arial;
}

.tablink {
	background-color: #555;
	color: white;
	float: left;
	border: none;
	outline: none;
	cursor: pointer;
	padding: 14px 16px;
	font-size: 17px;
	width: 50%;
	max-width: 430px;
}

.tablink:hover {
	background-color: #777;
}

.tabcontent {
	display: block;
	height: 100%;
}

.Rt-chart {
	display: block;
	float: left;
	width: 430px;
	height: 323px;
}

